--- a/api_data/Dockerfile
+++ b/api_data/Dockerfile
@@ -1,6 +1,6 @@
-FROM python:3.7-alpine
+FROM python:3
 WORKDIR /
 ADD . /
-RUN bash update.sh
+RUN bash update.sh 
 RUN pip3 install -r requirements.txt
 CMD ["bash", "start_api.sh"]
